# vistrings

./: .gitignore  README.md  pyproject.toml
tests/: strings.vi  test_strings.py
vistrings/: __main__.py  strings.py
