[tool.poetry]
name = "vistrings"
version = "0.1"
description = "Extracts plaintext from LabVIEW VI files"
authors = ["strainmike",]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.0"
pylabview-helpers = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
vistrings = "vistrings.__main__:main"